--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1709,3 +1709,544 @@ form label {
     }
 
 }
+
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+.open-image {
+    width: 140px;
+    height: 111px;
+    background-color: #F5F5F5;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.open-image h5 {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.append-div {
+    transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    position: relative;
+}
+
+.removebtn {
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    position: absolute;
+}
+
+.append-div:hover .removebtn {
+    opacity: 1;
+    visibility: visible;
+}
+
+.append-div img {
+    width: 140px;
+    height: 111px;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+}
+
+.about {
+    background: url('../images/about-bg.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+}
+
+.about-header h4 {
+    font-size: 24px;
+    font-weight: 700;
+    color: var(--white);
+}
+
+.about-header p {
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--white);
+}
+
+.py-50 {
+    padding-block: 50px;
+}
+
+.about-grid-details h4 {
+    font-weight: 700;
+    font-size: 22px;
+    color: #B3561B;
+}
+
+.about-grid-details h1 {
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--black);
+}
+
+.about-grid-details p {
+    font-weight: 500;
+    font-size: 16px;
+    color: #3E3E3E;
+}
+
+.value-heading h4 {
+    font-size: 38px;
+    font-weight: 700;
+    color: var(--black);
+}
+
+.value-heading p {
+    font-size: 16px;
+    font-weight: 500;
+    color: #3E3E3E;
+}
+
+.values-icon h4 {
+    font-size: 18px;
+    font-weight: 600;
+    color: #B3561B;
+    margin-top: 10px;
+    text-transform: uppercase;
+}
+
+.values-icon {
+    display: flex;
+    gap: 120px;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+}
+
+.create-info h5 {
+    font-size: 36px;
+    font-weight: 700;
+    text-transform: capitalize;
+    color: var(--black);
+}
+
+.create-info p {
+    font-size: 16px;
+    font-weight: 500;
+    color: #3E3E3E;
+}
+
+.create-info .text-login {
+    font-size: 22px;
+    font-weight: 700;
+    color: #B3561B;
+}
+
+.question-info h5 {
+    font-size: 22px;
+    font-weight: 700;
+    color: #B3561B;
+}
+
+.question-info h1 {
+    font-size: 48px;
+    font-weight: 700;
+    color: var(--black);
+}
+
+.faq-header h4 {
+    font-size: 48px;
+    color: #1F3D4F;
+    font-weight: 700;
+}
+
+.faq-header p {
+    font-size: 24px;
+    color: #667085;
+    font-weight: 500;
+}
+
+.faq {
+    background-color: #F9F9F9;
+}
+
+.accordion-body {
+    white-space: normal;
+    color: #667085;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.accordion-button h4 {
+    font-size: 24px;
+    font-weight: 700;
+    color: var(--black);
+}
+
+.accordion-button:focus {
+    box-shadow: none !important;
+}
+
+.accordion-button:not(.collapsed) {
+    background-color: transparent;
+    box-shadow: none !important;
+}
+
+.accordion-item {
+    border: 1px solid #F0F4FF !important;
+    border-radius: 8px !important;
+    -webkit-border-radius: 8px !important;
+    -moz-border-radius: 8px !important;
+    -ms-border-radius: 8px !important;
+    -o-border-radius: 8px !important;
+    box-shadow: 2px 2px 10px rgba(209, 209, 209, 0.1);
+}
+
+.chat-thread h4 {
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--black);
+    margin-bottom: 3px;
+}
+
+.chat-thread p {
+    font-size: 16px;
+    font-weight: 500;
+    color: #848484;
+    margin-bottom: 0;
+}
+
+.chat-thread ul {
+    padding-left: 0;
+    list-style: none;
+}
+
+.chat-thread ul li {
+    padding: 12px;
+}
+
+.chat-thread ul li.active {
+    background-color: #F7F8F9;
+}
+
+.mb-16 {
+    margin-bottom: 16px;
+}
+
+.chat-header h4 {
+    color: #1F3D4F;
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 0px;
+}
+
+.chat-header {
+    gap: 14px;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+}
+
+.onetone {
+    list-style: none;
+    padding-left: 0;
+    padding-inline: 16px;
+}
+
+.mymessage {
+    display: flex;
+    justify-content: end;
+}
+
+.mymessage p {
+    background-color: #002E3E;
+    color: var(--white);
+    margin-bottom: 0;
+    padding: 14px 22px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    border-bottom-right-radius: 0 !important;
+    max-width: 302px;
+}
+
+.othermessage p {
+    background-color: #848484;
+    color: var(--white);
+    margin-bottom: 0;
+    padding: 14px 22px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    border-bottom-left-radius: 0 !important;
+    max-width: 302px;
+}
+
+.message {
+    display: flex;
+    gap: 16px;
+}
+
+.timespan {
+    font-size: 14px;
+    font-weight: 500;
+    color: #414141;
+}
+
+.chat-footer {
+    background-color: #FCFCFC;
+}
+
+.chat-footer input {
+    padding: 22px 12px;
+    border: 1px solid #F0F4FF;
+    outline: 0;
+    width: 100%;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+}
+
+.pz-20 {
+    padding-inline: 20px;
+    padding-block: 24.5px;
+}
+
+.send-btn {
+    width: 54px;
+    height: 54px;
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+    border: 1px solid #F0F4FF;
+    background-color: #FAFAFA;
+    font-size: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#chat-scroll,
+#thread-scroll {
+    overflow-y: auto;
+    max-height: calc(100vh - 90px);
+    height: 450px;
+}
+
+.product_details {
+    background-color: #FCFFFC;
+}
+
+.product-info h4 {
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 48px;
+}
+
+.product-info .dollar {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28.8px;
+    color: #1F3D4F;
+}
+
+.product-info .pricee {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28.8px;
+    color: #1F3D4F;
+}
+
+.custom-badge {
+    color: #263238;
+    font-size: 18px;
+    line-height: 22.5px;
+    font-weight: 600;
+    padding: 8px 20px 8px 20px;
+    gap: 10px;
+    border-radius: 100px;
+    border: 1px solid #F0F4FF;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+    width: fit-content;
+}
+
+.about-product {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19.2px;
+    text-align: left;
+    color: #333333;
+
+}
+
+.loaction-heading {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19.2px;
+    text-align: left;
+    color: var(--black);
+
+}
+
+.card-custom {
+    padding: 22px 21px 22px 21px;
+    gap: 12px;
+    border-radius: 12px;
+    border: 1px solid #F0F4FF;
+    background: #FEFEFD;
+    box-shadow: 0px 4px 14px 0px #E3E3E329;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
+}
+
+.card-custom h4 {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19.2px;
+    text-align: left;
+    color: #414141;
+}
+
+.btn-direction {
+    padding: 14px 28px 14px 28px;
+    gap: 10px;
+    border-radius: 11px;
+    border: 1px solid #F0F4FF;
+    -webkit-border-radius: 11px;
+    -moz-border-radius: 11px;
+    -ms-border-radius: 11px;
+    -o-border-radius: 11px;
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+    color: #263238;
+    width: 100%;
+    display: block;
+}
+
+/* carousel  */
+#sync1 {
+    .item {
+        margin: 5px;
+        color: #FFF;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        text-align: center;
+    }
+}
+
+#sync2 {
+    .item {
+        border: 1px solid #C9C9C9;
+        margin: 5px;
+        color: #FFF;
+        -webkit-border-radius: 8px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        text-align: center;
+        cursor: pointer;
+
+    }
+
+    .current .item {
+        border: 1px solid #B3561B;
+    }
+}
+
+
+
+.owl-theme {
+    .owl-nav {
+        [class*='owl-'] {
+            transition: all .3s ease;
+
+            &.disabled:hover {
+                background-color: #D6D6D6;
+            }
+        }
+
+    }
+}
+
+#sync1.owl-theme {
+    position: relative;
+
+    .owl-next,
+    .owl-prev {
+        width: 22px;
+        height: 40px;
+        margin-top: -20px;
+        position: absolute;
+        top: 50%;
+    }
+
+    .owl-prev {
+        left: 10px;
+    }
+
+    .owl-next {
+        right: 10px;
+    }
+}
+
+#sync1 .item img {
+    border-radius: 12px;
+    border: 1px solid #F0F4FF;
+    width: 100%;
+    aspect-ratio: 4/3;
+    object-fit: cover;
+    overflow: hidden;
+    overflow-clip-margin: padding-box;
+}
+
+#sync2 .item img {
+    display: block;
+    width: 100%;
+    aspect-ratio: 4 / 3;
+    object-fit: cover;
+    overflow: hidden;
+    overflow-clip-margin: padding-box;
+}
+
+/* carousel  */
