--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -2292,15 +2292,7 @@ input[type=number] {
 
 #sync2 {
     .item {
-        border: 1px solid #C9C9C9;
         margin-right: 5px;
-        color: #FFF;
-        -webkit-border-radius: 8px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-        text-align: center;
-        cursor: pointer;
-
     }
 
     /* .current .item {
@@ -2361,6 +2353,12 @@ input[type=number] {
     object-fit: cover;
     overflow: hidden;
     overflow-clip-margin: padding-box;
+    border-radius: 12px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    border: 3px solid #F0F4FF;
+    -o-border-radius: 12px;
 }
 
 
@@ -3037,4 +3035,39 @@ input[type=number] {
     font-size: 14px;
     text-transform: capitalize;
     padding: 8px 20px 8px 20px;
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
+.fade-out {
+    animation: fadeOut 1s forwards;
+}
+
+#sync2 .active-border img {
+    border: 3px solid #B3561B;
+}
+
+#profile .dropdown-menu,
+.top-icons .dropdown .dropdown-menu {
+    padding-block: 0;
+}
+
+#profile .dropdown-menu li a,
+.top-icons .dropdown .dropdown-menu li a {
+    padding-block: 0.5rem;
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
+    border-top-left-radius: 0.375rem !important;
+    border-top-right-radius: 0.375rem !important;
 }
